# airas-20251020-120659-matsuzawa

./: README.md  pyproject.toml
.github/workflows/: compile_latex_with_open_code.yml  prepare_images_for_html.yml  run_evaluation_with_open_code.yml  run_full_experiment_with_open_code.yml  run_full_experiment_with_open_code_2.yml  run_trial_experiment_with_open_code.yml  run_trial_experiment_with_open_code_2.yml
.research/: research_history.json
.research/iteration1/: config.yaml  stderr.txt  stdout.txt  wandb_config.yaml
.research/iteration1/comparative-1-ResNet-18-11-7M--CIFAR-10-C-severity-5/: metrics.json
.research/iteration1/comparison/: aggregated_metrics.json  significance_tests.json
.research/iteration1/proposed-ResNet-18__11M_-CIFAR-10-C__severity_5_/: config.yaml
.research/iteration2/comparative-1-ResNet-18-11-7M--CIFAR-10-C-severity-5/: metrics.json
.research/iteration2/comparison/: aggregated_metrics.json  significance_tests.json
.research/iteration4/comparative-1-ResNet-18-11-7M--CIFAR-10-C-severity-5/: metrics.json
.research/iteration4/comparison/: aggregated_metrics.json  (+1 more)
.research/iteration6/: config.yaml  stderr.txt  stdout.txt
.research/iteration7/: stderr.txt  stdout.txt
branches/main-retry-4/: index.html
branches/main-retry-5/: index.html
config/: config.yaml
config/run/: comparative-1-ResNet-18 (11M)-CIFAR-10-C (severity 5).yaml  comparative-1-ResNet-18-11-7M--CIFAR-10-C-severity-5.yaml  proposed-ResNet-18 (11M)-CIFAR-10-C (severity 5).yaml  proposed-ResNet-18-11-7M--CIFAR-10-C-severity-5.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
(+32 files in other folders)
