[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "cw-tent-experiments"
version = "0.4.0"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "timm",
    "robustbench",
    "hydra-core",
    "omegaconf",
    "wandb",
    "optuna",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "pandas",
    "pyyaml",
    "scipy",
]
