[tool.poetry]
name = "cw-tent-experiments"
version = "0.1.0"
description = "Reproducible experiments for CW-TENT paper"
authors = ["AI Researcher <ai@researcher.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchvision = "^0.15.0"
timm = "^0.9.2"
hydra-core = "^1.3.2"
wandb = "^0.15.0"
optuna = "^3.3.0"
datasets = "^2.14.4"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
PyYAML = "^6.0"
pandas = "^2.0.3"
scipy = "^1.10.0"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"