[project]
name = "cw-tent-experiments"
version = "0.1.0"
description = "Reproducible experiments for CW-TENT paper"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.2",
    "hydra-core>=1.3.2",
    "wandb>=0.15.0",
    "optuna>=3.3.0",
    "datasets>=2.14.4",
    "seaborn>=0.12.2",
    "matplotlib>=3.7.2",
    "PyYAML>=6.0",
    "pandas>=2.0.3",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]